# delta-docs

./: .eslintignore  .eslintrc.js  .prettierignore  README.md  gatsby-browser.jsx  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  gatsby-ssr.jsx  jsconfig.json  netlify.toml  package-lock.json  package.json
.github/workflows/: build-checks.yml
config/: menus.js  search.js  theme.js  version.js
src/components/: Button.jsx  ButtonRow.jsx  CardDataList.jsx  CodeBlock.jsx  CodeTabs.jsx  Divider.jsx  Embed.jsx  Form.jsx  Grid.jsx  Icon.jsx  ImageStrip.jsx  Info.jsx  Link.jsx  LinkList.jsx  MDX.jsx  Pagination.jsx  SEO.jsx  Section.jsx  Table.jsx  Tiles.jsx  Typography.jsx
src/components/PageLayout/: HeaderNavItem.jsx  PageFooter.jsx  PageHeader.jsx  PageHeaderSearchInput.jsx  index.jsx
src/layouts/: DefaultLayout.jsx
src/layouts/components/: OneColumnLayout.jsx  TableOfContents.jsx  TwoColumnLayout.jsx
src/pages/: 404.jsx  index.mdx
src/pages/latest/: batch.mdx  best-practices.mdx  concurrency-control.mdx  constraints.mdx  delta-apidoc.mdx  delta-batch.mdx  delta-change-data-feed.mdx  delta-column-mapping.mdx  delta-constraints.mdx  delta-faq.mdx  delta-intro.mdx  delta-resources.mdx  delta-standalone.mdx  delta-storage-oss.mdx  delta-storage.mdx  delta-streaming.mdx  delta-update.mdx  delta-utility.mdx  index.mdx  (+12 more)
static/quickstart_docker/: Dockerfile_delta_quickstart  Dockerfile_quickstart  README.md  quickstart.ipynb  startup.sh
static/quickstart_docker/rs/: Cargo.toml
static/quickstart_docker/rs/examples/: read_delta_datafusion.rs  read_delta_table.rs
(+24 files in other folders)
