[package]
name = "quickstart"
version = "0.1.0"
rust-version = "1.64"
authors = ["Denny Lee <denny.g.lee@gmail.com>"]
license = "Apache-2.0"
keywords = ["deltalake", "delta", "datalake", "deltars"]
description = "Quick Start Delta Lake Rust examples"
edition = "2021"

[dependencies]
tokio = "1.23.0"
deltalake = "0.5.0"

[[example]]
name = "read_delta_table"